home section hero image fixed on mobile

--- a/src/Components/MainComponents/HomeSectionsFinal/HomeSection1.module.css
+++ b/src/Components/MainComponents/HomeSectionsFinal/HomeSection1.module.css
@@ -79,6 +79,12 @@
   align-items: flex-end;
 }
 @media screen and (max-width: 590px) {
+  .HS1ContentContainer{
+   display: flex; 
+   flex-direction: column;
+  justify-content: space-around; 
+    gap: .7rem;
+  }
   .HS1Img1Height {
     height: 60px;
     padding-left: 95px;
@@ -89,12 +95,12 @@
   }
 
   .HSLogoContainer {
-    height: 250px;
-    width: 250px;
+    height: 280px;
+    width: 280px;
   }
 
   .HS1Text {
-    font-size: 30px;
+    font-size: 50px;
   }
 
   .HS1SubText {
@@ -104,7 +110,7 @@
     margin-left: 23%;
   }
   .HS1ContentLine {
-    width: 72px;
+    width: 120px;
   }
 
   .HS1ContentButtonContainer {
